# fastapi_zero_sync

./: .coverage  .gitignore  database.db  pyproject.toml
migrations/versions/: 5c929ad50576_create_users_table.py  6eab5ab2492f_update_users_table_updated_at_column.py  780cf5705264_update_users_table_updated_at_created_.py  e01d44791fb3_update_users_table.py
src/fast_zero/: app.py  models.py  security.py  settings.py
src/fast_zero/routers/: auth.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_users.py
